AV6 e AV7 concluídas

--- a/frontend/filmes.html
+++ b/frontend/filmes.html
@@ -40,7 +40,7 @@
                           Listar
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="#" id="linkListarEmissoras">Produtoras</a>
+                          <a class="dropdown-item" href="#" id="linkListarProdutoras">Produtoras</a>
                           <a class="dropdown-item" href="#" id="linkListarFilmes">Filmes</a> 
                           <a class="dropdown-item" href="#" id="linkListarElencos">Elencos</a>
                         </div>
